--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PORT=12345
+PORT=3009
 HOST=0.0.0.0
-DB_URL=jdbc:mysql://localhost:3306/dartgame
+
+DB_URL=jdbc:mysql://localhost:3306/dungcony
 DB_USER=root
 DB_PASS=123456
+
